--- a/portf.html
+++ b/portf.html
@@ -2,91 +2,42 @@
 <html>
     <head>
         <title>Rose Ndikiru</title>
-        <style>
-            .my-title
-            {
-                color: black;
-                font-size: 60px;
-                font-family: sans-serif;
-                text-align: center;
-                font-weight: bold;
-                margin-top: 100px;
-                
-            }
-            .my-description{
-                color: black;
-                font-family: Arial;
-                text-align: center;
-                font-size: 25px;
-            
-            }
-            .proj-button{
-                background-color: gold;
-                border: solid;
-                margin-left: 600px;
-                padding-left: 80px;
-                padding-right: 80px;
-                padding-top: 23px;
-                padding-bottom: 23px;
-                font-size: 18px;
-                font-weight: bold;
-                color: white;
-                border-radius: 10px;
-                margin-top: 40px;
-                cursor: pointer;
-                transition: background-color 0.15s, color 0.15s;
-            }
-            .proj-button:hover{
-                background-color:  rgb(184, 170, 91)
-            }
-            .home:hover{
-                color: rgb(94, 94, 201);
-            }
-            .about:hover{
-                color: rgb(94, 94, 201);
-            }
-            .projects:hover{
-                color: rgb(94, 94, 201);
-            }
-            .contact:hover{
-                color: rgb(94, 94, 201);
-            }
-            .name{
-                color: blue;
-                margin-left: 900px ;
-            }
-            .name:hover{
-                color: rgb(94, 94, 201);
-            }
-            .info-buttons{
-                color: blue;
-                font-size: 18px;
-                cursor: pointer;
-                font-family: Arial;
-                font-weight: bold;
-                display: flex;
-                gap: 20px;
-                align-items:center;
-                position: sticky;
-            }
-
-        </style>
+        <link rel="stylesheet" href="portf.css">
     </head>
-        <body>
+        <body style="background-image: url('static/background2-img.jpeg'); background-size:contain; background-position: center; ">
+            <img src="static/logo.jpg" alt="profile-pic" class="round-image">
+            <p class="name">ROSE NDIKIRU</p>
             <div class="info-buttons">
+                <a href="#home">
                 <span class="home">HOME</span>
+            </a>
+            <a href="#about">
                 <span class="about">ABOUT</span>
+                </a>
+                <a href="#projects">
                 <span class="projects">PROJECTS</span>
-                <span class="contact">CONTACTS</span>
-                <span class="name">ROSE NDIKIRU</span>
+            </a>
+                <a href="#contact">
+                    <span class="contact">CONTACTS</span>
+                </a>
             </div>
-            <p class="my-title">HEY, I'M ROSE NDIKIRU</p>
+
+            <section id="home-page">
+                <p class="my-title">HEY, I'M ROSE NDIKIRU</p>
             <p class="my-description">
-                A Frontend Web Developer, Building and Managing Beautiful and Professional Websites as well as Web Applications.
+                SOFTWARE ENGINEER, FRONT-END DEVELOPER & DESIGNER.
             </p>
-            <button class="proj-button">
-                PROJECTS
-            </button>
-            <p>ABOUT ME</p>
+            </section>
+            <section id="about">
+                <p style="color:white; font-size: 40px; text-align: center; font-weight:bold; width: fit-content;  background-color: black; border: 2px solid black; border-left: 20px; padding: 10px;  margin: 300px auto; margin-bottom: 50px; margin-top: 400px;">ABOUT ME</p>
+                <p style="text-align: center; font-size: 23px; color: white;">Here you will find more information about me, what I do, and my current skills mostly in terms of programming and technology</p>
+                <div class="about-me">
+                    <p style = "font-size: 30px; font-weight: bold;" >Get to know me! </p>
+                    <p>I'm a Frontend Focused Web Developer building and managing the Front-end of Websites and Web Applications that leads to the success of the overall product. Check out some of my work in the Projects section.</p>
+                    <p>I also like sharing content related to the stuff that I have learned over the years in Web Development so it can help other people of the Dev Community. Feel free to Connect or Follow me on my Linkedin where I post useful content related to Web Development and Programming</p>
+                    <p>I'm open to Job opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my skills and experience then don't hesitate to contact me.</p>
+                </div>
+            </section>
+            <div class="part-image"><img src="/static/portfolio_profile.jpeg"></div>
         </body>
 </html>
